fixed image spacing and style

--- a/assets/css/admin-main.css
+++ b/assets/css/admin-main.css
@@ -15667,8 +15667,8 @@ input[type=radio].cptm-radio {
 }
 
 .cptm-thumbnail-placeholder-icon {
-  font-size: 120px;
-  color: gainsboro;
+  font-size: 40px;
+  color: #D2D6DB;
 }
 
 .cptm-thumbnail-img-wrap {
@@ -16895,6 +16895,7 @@ input[type=radio].cptm-radio {
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
+  text-transform: capitalize;
 }
 .cptm-preview-image-upload.cptm-preview-image-upload--show {
   margin-bottom: 0;
@@ -20287,8 +20288,8 @@ input[type=radio].cptm-radio {
 }
 
 .cptm-thumbnail-placeholder-icon {
-  font-size: 120px;
-  color: gainsboro;
+  font-size: 40px;
+  color: #D2D6DB;
 }
 
 .cptm-thumbnail-img-wrap {
@@ -21515,6 +21516,7 @@ input[type=radio].cptm-radio {
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
+  text-transform: capitalize;
 }
 .cptm-preview-image-upload.cptm-preview-image-upload--show {
   margin-bottom: 0;
@@ -25174,8 +25176,8 @@ input[type=radio].cptm-radio {
 }
 
 .cptm-thumbnail-placeholder-icon {
-  font-size: 120px;
-  color: gainsboro;
+  font-size: 40px;
+  color: #D2D6DB;
 }
 
 .cptm-thumbnail-img-wrap {
@@ -26402,6 +26404,7 @@ input[type=radio].cptm-radio {
   font-size: 14px;
   font-weight: 400;
   line-height: 16px;
+  text-transform: capitalize;
 }
 .cptm-preview-image-upload.cptm-preview-image-upload--show {
   margin-bottom: 0;
